Quarterly points calculation logic added.